# Portfolio

./: JupyterNotebook Data.xlsx  README.md
Basketball-API-AP/: Ploter.py  ReadME  main.py  pyproject.toml  replit_zip_error_log.txt
Farm Financial Health/: DataVisualization.docx  FarmFinancialHealthJupyterNotebook.ipynb  ReadME
FlaskWeb/: ReadME  main.py  replit_zip_error_log.txt
FlaskWeb/templates/: About.html  Contact.html  Gallery.html  Services.html  Weather.html  index.html  index1.html
Space, Weather, Distance, Flask/: Country.py  Distance.py  ISS.py  ReadME  ReverseGeo.py  Weather.py  main.py  pyproject.toml  replit_zip_error_log.txt
VirtualWorkBook (11)/: ReadME  main.py  pyproject.toml  replit_zip_error_log.txt
VirtualWorkBook (11)/Excel/: Top Earners with this Employer since 1996.xlsx  Top_Earners_Charts_Analysis.xlsx
