[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "flask>=3.1.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.32.0",
]
